# riscy

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md
src/: ELFImage.cpp  ELFImage.h  MemoryReaders.h
src/AArch64/: Emitter.cpp  Emitter.h  ISel.cpp  ISel.h  Instr.h  Liveness.cpp  Liveness.h  RegAlloc.cpp  RegAlloc.h
src/IR/: IR.cpp  IR.h
src/RISCV/: CFG.cpp  CFG.h  DecodedInst.h  Decoder.cpp  Decoder.h  Lifter.cpp  Lifter.h  Printer.cpp  Printer.h
src/runtime/: runtime.c  runtime.h
tests/: CFGTests.cpp  DecoderTests.cpp  IRTests.cpp  TestUtils.h
tests/e2e/: test_decode.py
tests/e2e/samples/: arith.c  branches.c  fib.c  mem.c
tools/: __init__.py  lower.py  riscy.cpp
